[gd_scene load_steps=11 format=3 uid="uid://dfekpm2ls11gq"]

[ext_resource type="Script" path="res://Scripts/game_end.gd" id="1_4mogg"]
[ext_resource type="FontFile" uid="uid://b7ka8etnt22qj" path="res://Font/PTSansCaption-Regular.ttf" id="1_sl0wj"]
[ext_resource type="Texture2D" uid="uid://bsodv3g154ayd" path="res://Sprites/Gradient_2.png" id="2_ha07c"]
[ext_resource type="Texture2D" uid="uid://je8puxrtx3o2" path="res://Sprites/button_none_shadow.png" id="2_hy183"]
[ext_resource type="Texture2D" uid="uid://bju2y56qh7a1p" path="res://Sprites/Gradient.png" id="3_qfu2r"]
[ext_resource type="Texture2D" uid="uid://brb8ofapmi7gr" path="res://Sprites/button_outer.png" id="6_5k7lp"]

[sub_resource type="Animation" id="Animation_roow8"]
resource_name = "Fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.46, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_x3unq"]
resource_name = "Fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.46, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pmm0j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mjbfi"]
_data = {
"Fade_in": SubResource("Animation_roow8"),
"Fade_out": SubResource("Animation_x3unq"),
"RESET": SubResource("Animation_pmm0j")
}

[node name="Game_end" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4mogg")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Word" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -320.0
offset_right = 300.0
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("1_sl0wj")
theme_override_font_sizes/font_size = 35
text = "Поздравляем!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Question" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.509804, 0.509804, 0.509804, 1)
theme_override_fonts/mono_font = ExtResource("1_sl0wj")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[center]Вы завершили Тест 1, и правильно овтетили на [color=00bed5]19/20 [/color]вопросов."
scroll_active = false
autowrap_mode = 2

[node name="Word2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("1_sl0wj")
theme_override_font_sizes/font_size = 25
text = "Ошибки:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(600, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -85.0
offset_right = 300.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect2" type="TextureRect" parent="Control/MarginContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("2_ha07c")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("3_qfu2r")
expand_mode = 2

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(350, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 220.0
offset_right = 175.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_mode = 0
flat = true
metadata/_edit_group_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="Button"]
modulate = Color(0, 0.745098, 0.835294, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hy183")
region_rect = Rect2(0, 0, 72, 72)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 17

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_sl0wj")
theme_override_font_sizes/font_size = 24
text = "Вернуться в меню"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_again" type="Button" parent="."]
custom_minimum_size = Vector2(350, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 291.0
offset_right = 175.0
offset_bottom = 351.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_mode = 0
flat = true
metadata/_edit_group_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="Button_again"]
modulate = Color(0, 0.745098, 0.835294, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_5k7lp")
region_rect = Rect2(0, 0, 72, 72)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 17

[node name="Label" type="Label" parent="Button_again"]
modulate = Color(0, 0.745098, 0.835294, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_sl0wj")
theme_override_font_sizes/font_size = 24
text = "Перепройти тест"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mjbfi")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button_again" to="." method="_on_button_again_pressed"]
